# killmyargv

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: killmyargv.rs
src/: argv_addr.rs  env_addr.rs  lib.rs  main.rs
src/utils/: argv_addr.rs  env_addr.rs  mod.rs
testbin/set_cmdline_from_stdin/: Cargo.toml
testbin/set_cmdline_from_stdin/src/: main.rs
tests/: set_cmdline.rs  utils.rs
