[package]
name = "killmyargv"
version = "0.1.0"
edition = "2021"
categories = ["os"]
description = "as WIP, Ending your life with implementation-defined behavior"
exclude = ["tests/", "testbin/"]
license = "MIT"
keywords = ["args", "argv", "cmdline", "process", "setproctitle"]
readme = "README.md"
repository = "https://github.com/unknowndevQwQ/killmyargv"

[dependencies]
libc = "0.2.141"
log = "0.4.17"
thiserror = "1.0.40"

[dev-dependencies]
sysinfo = { version = "0.30.5", default-features = false }
spdlog-rs = {features = ["log"], version = "0.3.12"}
test-binary = "3.0.2"
base64 = "0.21.7"
linereader = "0.4.0"
pause_console = "0.2.0"

[features]
default = ["clobber_environ", "comp_argv", "stack_walking", "replace_argv_element", "replace_environ_element"]
clobber_environ = []
comp_argv = []
stack_walking = []
force_walking = [
    "stack_walking"
]
replace_argv_element = []
replace_environ_element = []
