[package]
name = "killmyargv"
version = "0.1.0"
edition = "2021"
build = "build.rs"
categories = ["os"]
description = "as WIP, Ending your life with implementation-defined behavior"
exclude = ["tests/", "testbin/"]
license = "MIT"
keywords = ["args", "argv", "cmdline", "process", "setproctitle"]
readme = "README.md"
repository = "https://github.com/unknowndevQwQ/killmyargv"

[dependencies]
libc = "0.2.169"
log = "0.4.25"
thiserror = "2.0.11"

[dev-dependencies]
sysinfo = { version = "0.30.13", default-features = false }
spdlog-rs = { version = "0.4.1", features = ["log"] }
test-binary = "3.0.2"
base64 = "0.22.1"
linereader = "0.4.0"
pause_console = "0.2.0"

[features]
default = ["clobber_environ", "compute_argv", "stack_walking", "replace_argv_element", "replace_environ_element"]
clobber_environ = []
compute_argv = []
stack_walking = []
force_walking = [
    "stack_walking"
]
replace_argv_element = []
replace_environ_element = []
