[package]
name = "set_cmdline_from_stdin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
killmyargv = { path = "../.." }

# A deliberately empty workspace section so that Cargo doesn't try to search
# upwards, just in case the parent manifest is broken. See:
# https://github.com/rust-lang/cargo/issues/10872#issuecomment-1186112506
[workspace]
